update final project

--- a/starter/app/src/main/res/layout/fragment_launch.xml
+++ b/starter/app/src/main/res/layout/fragment_launch.xml
@@ -6,13 +6,48 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center_horizontal"
         tools:context="com.example.android.politicalpreparedness.MainActivity">
 
         <!-- TODO: Add image for home screen logo. -->
+        <ImageView
+            android:id="@+id/imageHomeScreenLogo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/large_padding"
+            android:contentDescription="@string/image_launch_description"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ballot_logo" />
 
         <!-- TODO: Add Button to navigate to upcoming elections. -->
+        <Button
+            android:id="@+id/upcomingElectionsButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/medium_padding"
+            android:layout_marginBottom="@dimen/medium_padding"
+            android:background="@color/colorPrimaryDark"
+            android:text="@string/upcoming_button"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toTopOf="@+id/findNavigateButton"
+            app:layout_constraintEnd_toEndOf="@+id/imageHomeScreenLogo"
+            app:layout_constraintStart_toStartOf="@+id/imageHomeScreenLogo" />
 
         <!-- TODO: Add Button to navigate to representatives. -->
 
+        <Button
+            android:id="@+id/findNavigateButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/medium_padding"
+            android:layout_marginBottom="@dimen/medium_padding"
+            android:background="@color/colorPrimaryDark"
+            android:text="@string/find_button"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/upcomingElectionsButton"
+            app:layout_constraintStart_toStartOf="@+id/upcomingElectionsButton" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
