--- a/starter/app/src/main/res/values/dimens.xml
+++ b/starter/app/src/main/res/values/dimens.xml
@@ -2,6 +2,14 @@
 <resources>
     <dimen name="default_padding">8dp</dimen>
 
-    <!-- TODO: Add necessary dimension values -->s
+    <!-- TODO: Add necessary dimension values -->
+    <dimen name="small_padding">4dp</dimen>
+    <dimen name="medium_padding">16dp</dimen>
+    <dimen name="button_size">320dp</dimen>
+    <dimen name="icon_size">30dp</dimen>
+    <dimen name="default1_padding">12dp</dimen>
+    <dimen name="medium1_padding">24dp</dimen>
+    <dimen name="medium2_padding">30dp</dimen>
+    <dimen name="large_padding">150dp</dimen>
 
 </resources>
