--- a/starter/app/src/main/res/navigation/nav_graph.xml
+++ b/starter/app/src/main/res/navigation/nav_graph.xml
@@ -4,33 +4,49 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
     android:label="nav_graph"
-    app:startDestination="@id/launchFragment">
+    app:startDestination="@+id/launchFragment">
 
     <fragment
         android:id="@+id/launchFragment"
         android:name="com.example.android.politicalpreparedness.launch.LaunchFragment"
         android:label="fragment_launch"
-        tools:layout="@layout/fragment_launch"/>
+        tools:layout="@layout/fragment_launch">
+        <action
+            android:id="@+id/launch_to_elections"
+            app:destination="@+id/electionsFragment" />
+        <action
+            android:id="@+id/launch_to_representative"
+            app:destination="@+id/representativeFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/electionsFragment"
+        android:name="com.example.android.politicalpreparedness.election.ElectionsFragment"
+        android:label="fragment_elections">
+        <action
+            android:id="@+id/elections_to_voter_info"
+            app:destination="@+id/voterInfoFragment" />
+
+    </fragment>
 
     <fragment
         android:id="@+id/representativeFragment"
-        android:name="com.example.android.politicalpreparedness.representative.DetailFragment"
+        android:name="com.example.android.politicalpreparedness.representative.RepresentativeFragment"
         android:label="fragment_representative"
-        tools:layout="@layout/fragment_representative"></fragment>
+        tools:layout="@layout/fragment_representative">
+
+    </fragment>
     <fragment
         android:id="@+id/voterInfoFragment"
         android:name="com.example.android.politicalpreparedness.election.VoterInfoFragment"
         android:label="fragment_voter_info">
         <argument
             android:name="arg_election_id"
-            app:argType="integer" />
+            app:argType="string" />
         <argument
             android:name="arg_division"
             app:argType="com.example.android.politicalpreparedness.network.models.Division" />
     </fragment>
-    <fragment
-        android:id="@+id/electionsFragment"
-        android:name="com.example.android.politicalpreparedness.election.ElectionsFragment"
-        android:label="fragment_elections"/>
+
 
 </navigation>
