--- a/starter/app/src/main/res/values/styles.xml
+++ b/starter/app/src/main/res/values/styles.xml
@@ -10,5 +10,25 @@
     </style>
 
     <!-- TODO: Add necessary styles -->
+    <style name="StyleHeaderText">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="StyleTitleText">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="StyleSubTitleText">
+        <item name="android:textColor">@color/colorSubtitle</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="StyleButton">
+        <item name="android:backgroundTint">@color/colorPrimary</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="layout_constraintWidth_max">@dimen/button_size</item>
+    </style>
 
 </resources>
