--- a/starter/app/src/main/res/layout/fragment_representative.xml
+++ b/starter/app/src/main/res/layout/fragment_representative.xml
@@ -58,6 +58,7 @@
                 android:autofillHints=""
                 android:hint="@string/line2_hint"
                 android:inputType="textPostalAddress"
+                android:text="@={representativeViewModel.addressInputLiveData.line2}"
                 android:textColorHint="@color/gray50"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/address_line_1" />
