--- a/starter/app/src/main/res/layout/fragment_representative.xml
+++ b/starter/app/src/main/res/layout/fragment_representative.xml
@@ -13,6 +13,7 @@
 
     <!-- TODO: Add motion scene to hide form on vertical scroll. -->
     <androidx.constraintlayout.motion.widget.MotionLayout
+        android:id="@+id/representativeMotionLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutDescription="@xml/representative">
